[package]
name = "os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
# 테스트 시에 bootimage runner argument로 넣어준다
# isa-debug-exit은 QEMU를 exit하는 장치. 포트 매핑된 I/O이다.
# iobase - 장치의 포트 주소, iosize - 포트 size
# '-serial' - 출력을 stdout으로 redirect
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-success-exit-code = 33 # (0x10 << 1) | 1